fix spacing index page

--- a/frontend/src/components/Listings/listings.css
+++ b/frontend/src/components/Listings/listings.css
@@ -36,6 +36,7 @@
     width: 250px;
     height: 250px;
     padding: 20px;
+    padding-bottom: 90px;
 }
 
 
